fixed uneven number of tags

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,11 @@
 .project:hover {
   transform: scale(1.05);
 }
+
+.courses-table {
+  text-align: center;
+}
+
+.class-title {
+  font-weight: bold;
+}
